--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
 @inherits CustomBaseViewPage<TModel>
 <h3>@ViewData["Title"]</h3>
 <div class="text-center">
-    <h1 class="display-4"><p>@Localize("Home.page.hello")</p></h1>
+    <h1 class="display-4"><p>@Localize("Home.page.subtitle")</p></h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
